--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "XiangboYin/xiangboyin.github.io"
 author:
   # Biographic information
   avatar           : "yxb-profile.jpg"
-  name             : "Xiangbo Yin"
+  name             : "Xiangbo Yin(尹祥博)"
   pronouns         : # example: "she/her"  
   bio              : "Research Interests: Person Re-identification. "
   location         : "Xiamen, Fujian, China"
