--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Homepage"
+title                    : "Xiangbo Yin's Homepage"
 title_separator          : "-"
 name                     : &name "Xiangbo Yin"
 description              : &description "Xiamen University"
