--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Honors and Awards"
     url: /honors-awards/   
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Services"
+    url: /services/    
     
   - title: "Portfolio"
     url: /portfolio/
