--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /honors-awards/      
     
   - title: "Experience"
-    url: /experiencr/
+    url: /experience/
         
   - title: "Concat"
     url: /concat/
