--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Experience"
     url: /experience/
         
-  - title: "Concat"
-    url: /concat/
+  - title: "Contact"
+    url: /contact/
     
   # - title: "CV"
   #   url: /cv/
