--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Academic Services"
-    url: /services/ 
+  # - title: "Academic Services"
+  #   url: /services/ 
 
   - title: "Honors and Awards"
     url: /honors-awards/      
